--- a/python.html
+++ b/python.html
@@ -33,30 +33,32 @@
 
 <aside>
   <nav id="table_matiere">
-    <a href="#py_generalites">Généralités</a>
-    <a href="#py_pyenv">pyenv et les versions de Python</a>
-    <a href="#py_venv">Environnement virtuel avec venv</a>
-    <a href="#py_pycharm">PyCharm</a>
-    <a href="#py_saisie">Communiquer avec l'utilisateur</a>
+    <a href="#py_generalites">Structure du code</a>
+      <a href="">Hello world</a>
+      <a href="#py_variable">Les variables</a>
+      <a href="#py_chaine">Chaînes de caractères</a>
+      <a href="#py_liste">Les listes</a>
+      <a href="#py_liste_avance">Utilisation avancée des listes</a>
+      <a href="#py_tableau">Les tableaux</a>
+      <a href="#py_dictionnaire">Les dictionnaires</a>
+      <a href="#py_condition">Les conditions</a>
+      <a href="#py_boucle">Les boucles</a>
+      <a href="#py_saisie">Saisie utilisateur</a>
+      <a href="#py_input">Input/Output</a>
+      <a href="#py_fonction">Les fonctions</a>
+      <a href="#py_exception">Gestion des exceptions</a>
+      <a href="#py_objet">Programmation objet</a>
     <a href="#py_import_package">Importer un package</a>
-    <a href="#py_random">Les principaux modules</a>
-    <a href="#py_creer_package">Créer un package avec Poetry</a>
-    <a href="#py_variable">Les variables</a>
-    <a href="#py_condition">Branchement conditionnel</a>
-    <a href="#py_boucle">Les boucles</a>
-    <a href="#py_chaine">Les chaînes de caractères</a>
-    <a href="#py_tableau">Les tableaux</a>
-    <a href="#py_liste">Les listes</a>
-    <a href="#py_liste_avance">Utilisation avancée des listes</a>
-    <a href="#py_dictionnaire">Les dictionnaires</a>
-    <a href="#py_fonction">Les fonctions</a>
-    <a href="#py_exception">Gestion des exceptions</a>
-    <a href="#py_objet">Programmation objet</a>
-    <a href="#py_input">Input/Output</a>
-    <a href="#py.sub">subprocess et les lignes de commande</a>
-    <a href="#py_pep">Respect du PEP8</a>
+      <a href="#py_random">Les principaux modules</a>
+      <a href="#py_venv">Environnement virtuel avec venv</a>
+      <a href="#py_pycharm">PyCharm</a>
     <a href="#py_argparse">Argparse</a>
     <a href="#py_tkinter">Tkinter</a>
+      <a href="">unittest</a>
+      <a href="#py_pyenv">pyenv et les versions de Python</a>
+      <a href="#py_pep">Respect du PEP8</a>
+      <a href="#py_creer_package">Créer un package avec Poetry</a>
+      <a href="#py.sub">subprocess et les lignes de commande</a>
   </nav>
 </aside>
 
