--- a/php.html
+++ b/php.html
@@ -94,13 +94,201 @@ chmod 755 xampp-linux-*-installer.run
 
   <p>Remarques importantes:</p>
   <ul>
-    <li>les fichiers .php doivent être placés dans le répertoire /opt/lampp/htdocs</li>
-    <li>lorsqu'on crée un dossier monProjet dans /op/lampp/htdocs, il est possible pour le navigateur d'y accéder en tapant
+    <li>les fichiers .php doivent être placés dans le répertoire /opt/lampp/htdocs, ou dans un sous-dossier de htdocs. Ce dossier est protégé par défaut. Il
+    faut donc modifier les droits d'accès pour pouvoir créer et modifier des dossiers et fichiers à l'intérieur. Ainsi, il
+    faut exécuter cd /opt/lampp puis sudo chmod 777 -R /opt/lampp/htdocs. 777 représente la permission pour le superutilisateur,
+    le groupe et les autres utilisateurs avec read qui repésente 4, write qui représente 2 et execute qui représente 1 (leur
+    somme étant égale à 7).</li>
+    <li>lorsqu'on crée un dossier monProjet dans /opt/lampp/htdocs, il est possible pour le navigateur d'y accéder en tapant
     dans la barre http://localhost/monProjet</li>
+    <li>le code source récupéré par le navigateur ne permet pas d'afficher le code PHP. Celui-ci est transformé en HTML, qui
+    est lu par le navigateur, et c'est ce code source dont dispose l'utilisateur. Ainsi, seul le serveur lit le code PHP.</li>
   </ul>
 
   <p>Pour arrêter le serveur, il faut exécuter</p>
   <pre><code class="language-svg">/opt/lampp/lampp stop</code></pre>
+
+  <h2>Structure du code PHP</h2>
+
+  <p>Les fichiers PHP sont munis d'une extension .php</p>
+
+  <p>Les instructions PHP s'insèrent dans le code HTML en utilisant les balises suivantes</p>
+  <pre><code class="language-html">&lt?php echo "Hello world"; ?&gt </code></pre>
+
+  <p>Les commentaires s'écrivent avec // pour une seule ligne et /* ... */ pour plusieurs lignes.</p>
+  <p>Notons que pour que les guillemets apparaissent dans le texte, il faut les faire précéder d'un antislash \.</p>
+
+  <h3>Particularité dans l'exécution d'un code PHP</h3>
+
+  <p>PHP refuse de s'exécuter une instruction durant plus de 15 secondes, à l'issue desquelles il s'arrête donc de travailler.
+  Ainsi, PHP n'est pas conçu pour les calculs numériques longs. Il a été conçu pour l'affichage dynamique de pages
+    Web. On préfèrera pour les calculs numériques C++ ou Python pour ses librairies scientifiques.</p>
+
+  <!-- VARIABLES -->
+
+  <h2>Les variables</h2>
+
+  <p>Les variables commencent toujours par la lettre $ en PHP, à l'instar de JavaScript.</p>
+  <p>L'affichage d'une variable se fait de la façon suivante</p>
+
+  <pre><code class="language-html">&lt?php $maVariable = 12;
+echo $maVariable;?&gt</code></pre>
+
+  <p>Contrairement à Python, echo ne renvoie pas à la ligne. Ainsi le code suivant affiche hello world.</p>
+  <pre><code class="language-html">echo "hello";
+echo " world";</code></pre>
+
+  <h3>Affichage d'une variable au sein d'un texte</h3>
+
+  <pre><code class="language-html">&lt?php $age = 25;
+echo "tu as ".$age." ans.";  </code></pre>
+
+  <h3>Les principaux types</h3>
+
+  <p> Les principaux types des variables en PHP sont string, int, float, bool (true, false) et NULL. Ce dernier caractérise l'absence de
+  type et s'utilise souvent pour tester si une variable est vide avec l'instruction if($maVariable == NULL).</p>
+
+  <p>Remarquons que le symbole ! permet la négation d'un booléen. Par exemple si $maVariable = true alors
+  !$maVariable vaut false.</p>
+
+  <h2>Opérateurs standard</h2>
+
+  <p>Les opérateurs standard sont les suivants : <br/>addition +, soustraction -, multiplication *, division /, modulo %,
+  AND ou &&, OR ou ||</p>
+  <p>L'incrémentation s'effectue de façon standard avec compteur++</p>
+  <p>Les opérateurs de comparaison sont les suivants : <br/>
+  égal ==, supérieur à >, inférieur à <, supérieur ou égal >=, inférieur ou égal <=, différent !=</p>
+
+
+  <!-- CONDITIONS -->
+
+  <h2>Les instructions conditionnelles</h2>
+
+  <h3>L'instruction if</h3>
+
+  <pre><code class="language-html">if (condition){
+  instructions;
+}
+elseif (condition){
+  instructions;
+}
+else{
+  instructions;
+}</code></pre>
+
+  <h3>L'instruction switch</h3>
+
+  <pre><code class="language-html">switch($maVariable){
+  case 0:
+    echo "mon message";
+    break;
+  case 1:
+    echo "mon message";
+    break;
+  default:
+    echo "mon message";
+}</code></pre>
+
+  <p>On utilise dans l'exemple ci-dessus les instructions break car sinon l'interpréteur lit les instructions
+  qui suivent et qui ne conviennent pas.</p>
+
+  <h3>Les ternaires</h3>
+
+  <p>Traduisons l'instruction suivante à l'aide de ternaires : si $age est supérieur à 18 alors $estMajeur prend
+  la valeur true, sinon il prend la valeur false.</p>
+
+  <pre><code class="language-html">$estMajeur = ($age>18) ? true : false;</code></pre>
+
+  <h2>Les boucles</h2>
+
+  <h3>La boucle while</h3>
+
+  <pre><code class="language-html">&lt?php while (condition){
+  instructions;
+}?&gt</code></pre>
+
+<h3>La boucle for</h3>
+
+  <pre><code class="language-html">&lt?php for ($i=0; $i<10; $i++){
+  instructions;
+}?></code></pre>
+
+<!-- TABLEAUX -->
+
+  <h2>Les tableaux</h2>
+
+<h3>Création d'un tableau</h3>
+
+  <pre><code class="language-html">&lt?php $tab = array("Hervé", "Benoit", "Simon"); ?&gt</code></pre>
+
+  <h3>Affectation et changement de valeur</h3>
+
+  <pre><code class="language-html">&lt?php $tab[2] = "Etienne"; ?&gt</code></pre>
+
+  <h3>Particularité de PHP</h3>
+
+  <p>Il est possible de remplir un tableau sans préciser l'indice. Celui-ci se met à jour automatiquement en choisissant
+  une valeur immédiatement supérieure au plus grand indice.</p>
+
+  <pre><code class="language-html">&lt?php $tab[] = "Noémie";
+$tab[] = "Charlize"; ?&gt</code></pre>
+
+  <h3>Affichage d'une valeur</h3>
+
+  <p>Pour afficher la valeur de $tab à l'indice 4 :</p>
+  <pre><code class="language-html">&lt?php  echo $tab[4] ?&gt</code></pre>
+
+  <h3>Parcours d'un tableau</h3>
+
+  <pre><code class="language-html">&lt?php  for($i=0; $i<5; $i++){
+  echo $tab[$i]. "&ltbr/&gt";
+}?&gt</code></pre>
+
+  <p>ou encore l'utilisation de la boucle foreach, équivalente PHP du for in de Python :</p>
+
+  <pre><code class="language-html">&lt?php  foreach($tab as $elm){
+  echo $elmt. "&ltbr/&gt";
+?&gt</code></pre>
+
+
+  <h2>Les dictionnaires</h2>
+
+  <p>Les dictionnaires sont appelés tableaux associatifs en PHP.</p>
+
+  <h3>Création d'un dictionnaire</h3>
+
+  <p>On utilise toujours le mot clé array</p>
+
+  <pre><code class="language-html">&lt?php $dico = array(
+  "nom" => "Pierre";
+  "age" => 18;
+)?&gt</code></pre>
+
+  <h3>Affectation et changement de valeur</h3>
+
+  <pre><code class="language-html">&lt?php $dico["nom"] = "Antoine"; ?&gt</code></pre>
+
+  <h3>Affichage d'une valeur</h3>
+
+  <pre><code class="language-html">&lt?php echo $dico["nom"]; ?&gt</code></pre>
+
+  <h3>Affichage d'un dictionnaire</h3>
+
+  <p>On utilise la boucle foreach pour afficher les valeurs</p>
+
+  <pre><code class="language-html">&lt?php  foreach($dico as $valeur){
+  echo $valeur. "&ltbr/&gt";
+?&gt</code></pre>
+
+  <p>On utilise également la boucle foreach pour afficher les couples clés-valeurs</p>
+
+  <pre><code class="language-html">&lt?php  foreach($dico as $cle => $valeur){
+  echo "clé:" . $cle . "valeur:" . $valeur . "&ltbr/&gt";
+?&gt</code></pre>
+
+  <h3>Rechercher dans un tableau</h3>
+
+  <p>ARRET</p>
 
 </section>
 
