--- a/php.html
+++ b/php.html
@@ -13,23 +13,7 @@
 
 <body>
 
-<div id="bandeau">
-  <h1> Memento </h1>
-  <h1> PHP </h1>
-
-  <nav>
-    <div class="element"> <a href="html.html">HTML</a> </div>
-    <div class="element"> <a href="css.html">CSS</a> </div>
-    <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
-    <div class="element"> <a href="java.html">JAVA</a> </div>
-    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
-    <div class="element"> <a href="android.html">ANDROID</a> </div>
-    <div class="element"> <a href="php.html">PHP</a> </div>
-    <div class="element"> <a href="python.html">PYTHON</a> </div>
-    <div class="element"> <a href="c.html">C</a> </div>
-    <div class="element"> <a href="git.html">LINUX</a> </div>
-  </nav>
-</div>
+<?php include("bandeau.php") ?>
 
 <aside>
   <nav id="table_matiere">
@@ -120,7 +104,7 @@ chmod 755 xampp-linux-*-installer.run
 
   <h3>Particularité dans l'exécution d'un code PHP</h3>
 
-  <p>PHP refuse de s'exécuter une instruction durant plus de 15 secondes, à l'issue desquelles il s'arrête donc de travailler.
+  <p>PHP refuse de s'exécuter une instruction durant plus de 30 secondes, à l'issue desquelles il s'arrête donc de travailler.
   Ainsi, PHP n'est pas conçu pour les calculs numériques longs. Il a été conçu pour l'affichage dynamique de pages
     Web. On préfèrera pour les calculs numériques C++ ou Python pour ses librairies scientifiques.</p>
 
@@ -151,6 +135,9 @@ echo "tu as ".$age." ans.";  </code></pre>
   <p>Remarquons que le symbole ! permet la négation d'un booléen. Par exemple si $maVariable = true alors
   !$maVariable vaut false.</p>
 
+
+  <!-- OPERATEURS -->
+
   <h2>Opérateurs standard</h2>
 
   <p>Les opérateurs standard sont les suivants : <br/>addition +, soustraction -, multiplication *, division /, modulo %,
@@ -158,6 +145,7 @@ echo "tu as ".$age." ans.";  </code></pre>
   <p>L'incrémentation s'effectue de façon standard avec compteur++</p>
   <p>Les opérateurs de comparaison sont les suivants : <br/>
   égal ==, supérieur à >, inférieur à <, supérieur ou égal >=, inférieur ou égal <=, différent !=</p>
+  <p>La concaténation de string est réalisée à l'aide d'un point .</p>
 
 
   <!-- CONDITIONS -->
@@ -286,9 +274,61 @@ $tab[] = "Charlize"; ?&gt</code></pre>
   echo "clé:" . $cle . "valeur:" . $valeur . "&ltbr/&gt";
 ?&gt</code></pre>
 
+
   <h3>Rechercher dans un tableau</h3>
 
-  <p>ARRET</p>
+  <p>L'instruction suivante renvoie un booléen si maValeur existe dans le tableau $tab :</p>
+  <pre><code class="language-html">&lt?php in_array("maValeur", $tab); ?&gt</code></pre>
+  <p>Cette instruction est commune pour les tableaux et les dictionnaires.</p>
+
+  <p>L'instruction suivante renvoie l'indice de maValeur dans le tableau $tab :</p>
+  <pre><code class="language-html">&lt?php array_search("maValeur", $tab); ?&gt</code></pre>
+  <p>Cette instruction est commune pour les tableaux et les dictionnaires. Attention, si maValeur ne s'y trouve pas, alors l'instruction renvoie false. Cela signifie que le type qui est renvoyé
+    est variable, soit un string soit un bool.</p>
+
+
+
+  <h3>Rechercher dans un dictionnaire</h3>
+
+  <p>L'instruction suivante renvoie un booléen si maValeur existe dans le dictionnaire $dico :</p>
+  <pre><code class="language-html">&lt?php in_array("maValeur", $tab); ?&gt</code></pre>
+  <p>Cette instruction est commune pour les dictionnaires et les tableaux.</p>
+
+  <p>L'instruction suivante renvoie un booléen si la clé maCle existe dans le dictionnaire $dico :</p>
+  <pre><code class="language-html">&lt?php array_key_exists("maCle", $dico); ?&gt</code></pre>
+
+  <p>L'instruction suivante renvoie la clé de maValeur dans le dictionnaire $dico :</p>
+  <pre><code class="language-html">&lt?php array_search("maValeur", $dico); ?&gt</code></pre>
+  <p>Cette instruction est commune pour les dictionnaires et les tableaux. Attention, si maValeur ne s'y trouve pas, alors l'instruction renvoie false. Cela signifie que le type qui est renvoyé
+  est variable, soit un string soit un bool.</p>
+
+  <h2>Les fonctions</h2>
+
+  <p>On définit la fonction maFonction de la façon suivante</p>
+  <pre><code class="language-html">&lt?php function maFonction($param){
+  instructions;
+  return $resultat;
+} ?&gt</code></pre>
+
+  <p>On appelle la fonction maFonction de la façon suivante</p>
+  <pre><code class="language-html">&lt?php maFonction($param) ?&gt;</code></pre>
+
+
+  <h2>Traitement des chaînes de caractères</h2>
+
+  <table>
+    <tr><th>Fonction</th><th>Résultat obtenu</th></tr>
+    <tr><td>strlen($maChaine)</td><td>renvoie la longueur de $maChaine</td></tr>
+    <tr><td>str_replace("a", "b", $maChaine)</td><td>remplace les a par des b dans $maChaine</td></tr>
+    <tr><td>str_shuffle($maChaine)</td><td>mélange aléatoirement les caractères de $maChaine</td></tr>
+    <tr><td>strtolower($maChaine)</td><td>transforme en minuscules $maChaine</td></tr>
+    <tr><td>strtolupper($maChaine)</td><td>transforme en majuscules $maChaine</td></tr>
+    <tr><td>date("H")</td><td>renvoie l'heure actuelle</td></tr>
+    <tr><td>date("i")</td><td>renvoie les minutes actuelles</td></tr>
+    <tr><td>date("d")</td><td>renvoie le jour actuel</td></tr>
+    <tr><td>date("m")</td><td>renvoie le mois actuel</td></tr>
+    <tr><td>date("Y")</td><td>renvoie l'année actuelle</td></tr>
+  </table>
 
 </section>
 
