--- a/php.html
+++ b/php.html
@@ -5,15 +5,34 @@
   <title> Memento </title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="prism.css">
+  
   <meta charset="utf-8">
 </head>
 
 <!-- script de gestion des couleurs de code -->
 <script defer src="prism.js"></script>
 
+<div id="bandeau">
+  <h1> Memento </h1>
+  <h1> PHP </h1>
+
+  <nav>
+    <div class="element"> <a href="html.html">HTML</a> </div>
+    <div class="element"> <a href="css.html">CSS</a> </div>
+    <div class="element"> <a href="javascript.html">JAVASCRIPT</a> </div>
+    <div class="element"> <a href="java.html">JAVA</a> </div>
+    <div class="element"> <a href="kotlin.html">KOTLIN</a> </div>
+    <div class="element"> <a href="android.html">ANDROID</a> </div>
+    <div class="element"> <a href="php.html">PHP</a> </div>
+    <div class="element"> <a href="python.html">PYTHON</a> </div>
+    <div class="element"> <a href="c.html">C</a> </div>
+    <div class="element"> <a href="git.html">LINUX</a> </div>
+  </nav>
+</div>
+
 <body>
 
-<?php include("bandeau.php") ?>
+
 
 <aside>
   <nav id="table_matiere">
