--- a/html.html
+++ b/html.html
@@ -1415,7 +1415,7 @@ INSERER UNE VIDEO
 <h2 id="queries"> Les media queries </h2>
 
 
-
+<p>Rappel : en HTML les & doivent s'écrire &amp</p>
 
 
   
